Cleanup and generate code for ReefAngel.init(DEGREE_{F|C})